<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/button_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameProfileText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/emailProfileText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailProfileText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneProfileText"
        app:layout_constraintStart_toStartOf="@+id/nameProfileText"
        app:layout_constraintTop_toBottomOf="@+id/nameProfileText" />

    <EditText
        android:id="@+id/phoneProfileText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/dateProfileText"
        app:layout_constraintStart_toStartOf="@+id/emailProfileText"
        app:layout_constraintTop_toBottomOf="@+id/emailProfileText" />

    <EditText
        android:id="@+id/dateProfileText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/hint_date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/licenseProfileCheck"
        app:layout_constraintStart_toStartOf="@+id/phoneProfileText"
        app:layout_constraintTop_toBottomOf="@+id/phoneProfileText" />

    <CheckBox
        android:id="@+id/licenseProfileCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/checkbox_drivers_license"
        app:layout_constraintBottom_toTopOf="@+id/termsAndConditionsRadio"
        app:layout_constraintStart_toStartOf="@+id/dateProfileText"
        app:layout_constraintTop_toBottomOf="@+id/dateProfileText" />

    <RadioButton
        android:id="@+id/termsAndConditionsRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="65dp"
        android:text="@string/radio_terms_conditions"
        app:layout_constraintBottom_toTopOf="@+id/saveFormBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licenseProfileCheck" />

    <Button
        android:id="@+id/saveFormBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="115dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsAndConditionsRadio" />

</androidx.constraintlayout.widget.ConstraintLayout>
